--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     font-size: 16px;
 }
 
-header {
+#main-header {
     position: fixed;
     top: 0;
     left: 0;
@@ -17,13 +17,166 @@ header {
     background-color: darkgreen;
 }
 
-header p {
+#main-header p {
     color: yellow;
     font-weight: bold;
 }
 
+#main-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 24px;
+    width: 100vw;
+    margin: 0;
+    padding: 2px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: darkslategrey;
+}
+
+#main-footer p {
+    color: lightgrey;
+}
+
+#main-footer a {
+    color: lightskyblue;
+}
+
+#container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    padding-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #console {
-    
+    position: relative;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    border-style: groove;
+    border-width: 5px;
+    border-color: white;
+    border-radius: 25px;
+    height: 550px;
+    width: 350px;
+}
+
+.console-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 10%;
+    width: 100%;
+    margin: 0;
+    background-color: blue;
+    border-bottom: solid 1px yellow;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    cursor: pointer;
+}
+
+.console-header input {
+    width: 25px;
+}
+
+.complexity-title {
+    color: white;
+    font-weight: bold;
+    padding: 2px 20px;
+}
+
+.complexity-divider {
+    color: yellow;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 2.5px 0 yellow;
+    font-weight: 900;
+    margin: 0 3px;
+}
+
+.complexity-button {
+    color: lightgreen;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 300;
+}
+
+.complexity-button.active {
+    color: pink;
+}
+
+.complexity-button:hover {
+    color: red;
+}
+
+.complexity-button:active {
+    color: lightblue;
+}
+
+.console-viewport {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    height: 50%;
+    width: 100%;
+    margin: 0;
+    background-color: black;
+    cursor: crosshair;
+}
+
+.console-interface {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 40%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    border-top: solid 1px yellow;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.console-keypad {
+    height: 190px;
+    width: 140px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    border: solid 1px yellow;
+    background-color: blue;
+}
+
+.interface-button {
+    height: 32px;
+    width: 32px;
+    margin: 5px;
+    padding: 1px;
+    border: solid 1px lightgreen;
+    border-radius: 10px;
+    background-color: red;
+    color: #eee;
+    font-family: monospace;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
+
+.interface-button:active {
+    background-color: lightgreen;
+    color: #333;
 }
 
 #wallpaper {
