--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,39 @@
     height: 200px;
 }
 
+#result-banner {
+    display: none;
+
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    height: 25%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: blue;
+    color: #eee;
+    font-style: italic;
+    font-weight: 500;
+    border-top: solid 1px yellow;
+    border-bottom: solid 1px yellow;
+}
+
+#result-banner p {
+    font-size: 58px;
+}
+
+#result-banner.success {
+    background-color: green;
+    color: lightyellow;
+}
+
+#result-banner.failure {
+    background-color: red;
+    color: yellow;
+}
+
 #wallpaper {
     position: fixed;
     top: 0;
