Added pointer-events to number tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@
     width: 350px;
 }
 
+.click-through {
+    pointer-events: none;
+}
+
 .console-header {
     position: absolute;
     top: 0;
